# graphy-qml-file-selector-module

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt  conanfile.py
lib/include/: graphyFileSelector.h
lib/src/: graphyFileSelector.cpp
test/: CMakeLists.txt
